// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CollapsibleRow  onClick Class name is changed to show/hide content 1`] = `
<div
  className="collapse-item collapse"
>
  <div
    className="subject-item"
    title="Subject"
  >
    <span>
      Subject
    </span>
    <i
      className="icon-arrow"
      onClick={[Function]}
    />
  </div>
  <div
    className="content-item"
  >
    &lt;p&gt;Content&lt;/p&gt;
  </div>
</div>
`;

exports[`CollapsibleRow  onClick Class name is changed to show/hide content 2`] = `
<div
  className="collapse-item"
>
  <div
    className="subject-item"
    title="Subject"
  >
    <span>
      Subject
    </span>
    <i
      className="icon-arrow"
      onClick={[Function]}
    />
  </div>
  <div
    className="content-item"
  >
    &lt;p&gt;Content&lt;/p&gt;
  </div>
</div>
`;

exports[`CollapsibleRow  onClick Class name is changed to show/hide content 3`] = `
<div
  className="collapse-item collapse"
>
  <div
    className="subject-item"
    title="Subject"
  >
    <span>
      Subject
    </span>
    <i
      className="icon-arrow"
      onClick={[Function]}
    />
  </div>
  <div
    className="content-item"
  >
    &lt;p&gt;Content&lt;/p&gt;
  </div>
</div>
`;

exports[`CollapsibleRow  onClick onExpand function is called when expanding 1`] = `
<div
  className="collapse-item"
>
  <div
    className="subject-item"
    title="Subject"
  >
    <span>
      Subject
    </span>
    <i
      className="icon-arrow"
      onClick={[Function]}
    />
  </div>
  <div
    className="content-item"
  >
    &lt;p&gt;Content&lt;/p&gt;
  </div>
</div>
`;

exports[`CollapsibleRow  render isExpand = false - component is collapsed 1`] = `
<div
  className="collapse-item collapse"
>
  <div
    className="subject-item"
    title={undefined}
  >
    <span />
    <i
      className="icon-arrow"
      onClick={[Function]}
    />
  </div>
  <div
    className="content-item"
  />
</div>
`;

exports[`CollapsibleRow  render isExpand = true - component is expanded 1`] = `
<div
  className="collapse-item collapse"
>
  <div
    className="subject-item"
    title={undefined}
  >
    <span />
    <i
      className="icon-arrow"
      onClick={[Function]}
    />
  </div>
  <div
    className="content-item"
  />
</div>
`;

exports[`CollapsibleRow  render isHtml = false - component render correctly - show raw content 1`] = `
<div
  className="collapse-item collapse"
>
  <div
    className="subject-item"
    title="Subject"
  >
    <span>
      Subject
    </span>
    <i
      className="icon-arrow"
      onClick={[Function]}
    />
  </div>
  <div
    className="content-item"
  >
    &lt;p&gt;Content&lt;/p&gt;
  </div>
</div>
`;

exports[`CollapsibleRow  render isHtml = true - component render correctly - show content with Html format 1`] = `
<div
  className="collapse-item collapse"
>
  <div
    className="subject-item"
    title="Subject"
  >
    <span>
      Subject
    </span>
    <i
      className="icon-arrow"
      onClick={[Function]}
    />
  </div>
  <div
    className="content-item"
    dangerouslySetInnerHTML={
      Object {
        "__html": "<p>Content</p>",
      }
    }
  />
</div>
`;
